Getting physician data from server now